--- a/views/offices.html
+++ b/views/offices.html
@@ -57,7 +57,7 @@
                             <!-- <p class="margin--left"> -->
                                 <img src="{{item.photo}}" class="office__img border--radius" width="80" alt="Офис ЗемНедвижимости на {{item.adress}}">
                                 <div class="office__title">
-                                    <span>{{item.adress}}</span><br>
+                                    <span>{{item.city}}, {{item.adress}}</span><br>
                                     <small class="text--small">{{item.place}}</small>
                                 </div>
                             <!-- </p> -->
