--- a/views/home.html
+++ b/views/home.html
@@ -21,31 +21,31 @@
         <ul class="grid text--center list">
             <li class="col--1-5">
                 <a href="#">
-                    <span class="list__teaser"><img src="/Content/img/cat/icon01.png" alt=""></span>
+                    <span class="list__teaser"><img src="/Content/img/cat/icon01.jpg" alt=""></span>
                     <span class="list__link">Квартиры и комнаты</span>
                 </a>
             </li>
             <li class="col--1-5">
                 <a href="#/">
-                    <span class="list__teaser"><img src="/Content/img/cat/icon02.png" alt=""></span>
+                    <span class="list__teaser"><img src="/Content/img/cat/icon02.jpg" alt=""></span>
                     <span class="list__link">Новостройки</span>
                 </a>
             </li>
             <li class="col--1-5">
                 <a href="#/">
-                    <span class="list__teaser"><img src="/Content/img/cat/icon03.png" alt=""></span>
+                    <span class="list__teaser"><img src="/Content/img/cat/icon03.jpg" alt=""></span>
                     <span class="list__link">Аренда квартир и комнат</span>
                 </a>
             </li>
             <li class="col--1-5">
                 <a href="#/">
-                    <span class="list__teaser"><img src="/Content/img/cat/icon04.png" alt=""></span>
+                    <span class="list__teaser"><img src="/Content/img/cat/icon04.jpg" alt=""></span>
                     <span class="list__link">Коттеджи, таунхаусы, участки</span>
                 </a>
             </li>
             <li class="col--1-5">
                 <a href="#/">
-                    <span class="list__teaser"><img src="/Content/img/cat/icon05.png" alt=""></span>
+                    <span class="list__teaser"><img src="/Content/img/cat/icon05.jpg" alt=""></span>
                     <span class="list__link">Коммерческая недвижимость</span>
                 </a>
             </li>
